# ranker-app

./: .gitignore  README.md  pyproject.toml
src/: __main__.py
src/core/: core_consts.py  music_utilities.py  music_utilities_funcs.py  ranker.py  ranker_funcs.py  ranker_utilities.py  ranker_utilities_funcs.py
src/utils/: FileHandler.py  PrintHandler.py  utils.py
src/view/cl/: CLParser.py
src/view/menu/: MenuBuilder.py  MenuHandler.py  MenuObject.py
src_OLD/: script_old.py
