[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ranker-app"
version = "0.3.1"
description = "Utility app for building Rankings and other related utility functionalities."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Anonip" }]
dependencies = [
  "table-maker>=0.3.0",
]

[project.scripts]
ranker-app = "rankerapp.__main__:main"

[tool.setuptools]
package-dir = { "rankerapp" = "src" }
packages = ["rankerapp"]
