[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ranker-app"
version = "1.3.1"
description = "Utility app for building Rankings and other related utility functionalities."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "filippochinni" }]
dependencies = [
  "table-maker>=1.0.0",
]

[project.scripts]
ranker-app = "rankerapp.__main__:main"

[tool.setuptools]
package-dir = { "rankerapp" = "src" }
packages = ["rankerapp", "rankerapp.core", 'rankerapp.utils', 'rankerapp.view', 'rankerapp.view.cl', 'rankerapp.view.menu']
